--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -17,3 +17,19 @@
 .sorting_desc_disabled {
     background: url('/images/lib/datatables/sort_desc_disabled.png') no-repeat center right !important;
 }
+
+.navbar-default .navbar-nav > li > .btn-success > a:hover, .navbar-default .navbar-nav > li > .btn-success > a:focus {
+    background-color: #20895e;
+}
+
+.navbar-default .navbar-nav > li > a.btn-success {
+    color: #FFF;
+}
+
+.navbar-default .navbar-nav > li > a.btn-success:hover {
+    background-color: #20895E;
+}
+
+.panel-heading {
+    font-size: 20px;
+}
