Wrapped up connection between floors. Fixed map/floor switching on Leaflet Added map to editing Floors for purpose of adding packs of mobs there. Started work on map controls for the above. Wide layout is now full-width for the map.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -33,3 +33,20 @@
 .panel-heading {
     font-size: 20px;
 }
+
+.panel-heading-wide {
+    text-align: center;
+}
+
+#map {
+    height: 500px;
+    padding: 10px;
+}
+
+#map-controls {
+    height: 500px;
+}
+
+.switch-dungeon-control {
+    width: 400px;
+}
