--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,3 +10,8 @@
 
 // Font-Awesome
 @import "~font-awesome/scss/font-awesome.scss";
+
+// Leaflet
+@import "~leaflet/dist/leaflet.css";
+@import "~leaflet-draw/dist/leaflet.draw.css";
+@import "~leaflet-contextmenu/dist/leaflet.contextmenu.css";
