Upgraded font-awesome from 4.7 to 5.2.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,7 +10,10 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
 // Font-Awesome
-@import "~font-awesome/scss/font-awesome.scss";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "~@fortawesome/fontawesome-free/scss/solid.scss";
+@import "~@fortawesome/fontawesome-free/scss/regular.scss";
+@import "~@fortawesome/fontawesome-free/scss/brands.scss";
 
 // Leaflet
 @import "~leaflet/dist/leaflet.css";
