Dungeon start points are now able to be saved and retrieved. Up next is floor switch points. After that is making them targetable by the Route. In depth; this commit added the placing of font awesome icons as a marker on the map. To use it you must make a few classes and spawn them at certain points. Works for the DungeonStartMarker now, I will have to convert the rest later on if needed.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -81,3 +81,24 @@
 .default_table {
     width: 100%;
 }
+
+/* Class that's used for displaying custom markers with a font-awesome icon instead of the default marker */
+.marker_div_icon {
+    width: 30px;
+    height: 30px;
+    text-shadow: 2px 2px #1A1A1A;
+}
+
+.marker_div_icon_font_awesome {
+    text-align: center; /* Horizontally center the text (icon) */
+    line-height: 25px; /* Vertically center the text (icon) */
+}
+
+.marker_div_icon_dungeon_start_marker {
+    color: green;
+}
+
+.marker_div_icon_circle_border {
+    border: 3px solid;
+    border-radius: 15px;
+}
