Added dungeonswitch markers Reworked editing of enemies & markers (and everything that may come later), the popup is now triggered on click and not on right click + click on edit The popup code now uses handlebars fa-pencil -> fa-edit fa-remove -> fa-trash Enemies now use a custom (but default) marker

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -98,6 +98,10 @@
     color: green;
 }
 
+.marker_div_icon_dungeon_floor_switch_marker {
+    color: sandybrown;
+}
+
 .marker_div_icon_circle_border {
     border: 3px solid;
     border-radius: 15px;
