--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -99,7 +99,7 @@
 }
 
 .marker_div_icon_dungeon_floor_switch_marker {
-    color: sandybrown;
+    color: lightblue;
 }
 
 .marker_div_icon_circle_border {
