Datatable hell. It will NOT let me filter with a custom form. This is annoying.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -65,6 +65,12 @@
     max-height: 24px;
 }
 
+.display_icon {
+    width: 32px;
+    border-radius: 16px;
+    max-height: 32px;
+}
+
 .user_icon {
     width: 22px;
     color: white;
