--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,9 @@
 @import "~bootstrap-select/dist/css/bootstrap-select.min.css";
 @import "~bootstrap/scss/bootstrap";
 
+// Datatables
+@import "~datatables/media/css/jquery.dataTables.min.css";
+
 // Bootstrap theme
 //@import "~bootswatch/dist/superhero/_variables.scss";
 //@import "~bootswatch/dist/superhero/_bootswatch.scss";
