--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -43,8 +43,10 @@
 }
 
 #map {
-    height: 700px;
+    height: 900px;
     padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #map-controls {
@@ -114,6 +116,6 @@
 }
 
 /** DATATABLES */
-.routes_table_filter {
+#routes_table_filter {
     display: none;
 }
