You can now make your routes unlisted DungeonRoute IDs are no longer exposed; they are internal only. They are now addressed by a public key which is unique and cannot be easily guessed. Added a basic dungeons seeder, though the floors still need to be connected.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -18,6 +18,11 @@
     background: url('/images/lib/datatables/sort_desc_disabled.png') no-repeat center right !important;
 }
 
+/** BOOTSTRAP **/
+.left_checkbox {
+    width: 40px;
+}
+
 .leaflet-container {
 
 }
