--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,14 +7,14 @@
 
 // Bootstrap
 @import "~bootstrap-select/dist/css/bootstrap-select.min.css";
+
+// Bootstrap theme (bootstrap should be between these)
+// @import "~bootswatch/dist/superhero/_variables.scss";
 @import "~bootstrap/scss/bootstrap";
+// @import "~bootswatch/dist/superhero/_bootswatch.scss";
 
 // Datatables
 @import "~datatables/media/css/jquery.dataTables.min.css";
-
-// Bootstrap theme
-//@import "~bootswatch/dist/superhero/_variables.scss";
-//@import "~bootswatch/dist/superhero/_bootswatch.scss";
 
 // Font-Awesome
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
