Added save as new functionality to NPCs, seems worthwhile if we're going to pump in hundreds of entries manually. Perhaps a wowhead scraping is in order to speed things up a little. mpplnr is no longer a thing, it's now keystone.guru NPCs now have aggressiveness, indicating if they're passive or not (red/yellow unit name) Added some placeholder pins for enemies on the map. Will replace them I think (took these from wowhead, I will admit) Some minor bug fixes/changes

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -81,6 +81,12 @@
     text-align: center;
 }
 
+.enemy-icon {
+    width: 12px;
+    height: 12px;
+    background: url("/images/mapicon/pin-yellow.png") no-repeat center right !important;
+}
+
 /** GENERAL ICONS */
 .username_menu {
     width: 105px;
