FloorSwitchMarkers no longer use timestamps, since why whould they. Started work on exporting made data so it can be checked in. Choose to use direct SQL inserts since I don't want to write a full parser for a big ass JSON object. Perhaps I'll do that anyways later. But for now SQL inserts.
Fixed Npcs not saving correctly (game_id -> id), and not loading their set dungeon correctly
Floor switch markers now use a different icon (that of a door)

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -97,6 +97,10 @@
     background: url("/images/mapicon/boss.png") no-repeat center right !important;
 }
 
+.door_icon {
+    background: url("/images/mapicon/door.png") no-repeat center right !important;
+}
+
 /** GENERAL ICONS */
 .username_menu {
     width: 105px;
