Added friendly aggressiveness (for the DJ in Motherlode). Amended enemy creation tutorial with a piece about enemy packs for clarity.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -93,6 +93,10 @@
     background: url("/images/mapicon/neutral.png") no-repeat center right !important;
 }
 
+.friendly_enemy_icon {
+    background: url("/images/mapicon/friendly.png") no-repeat center right !important;
+}
+
 .boss_enemy_icon {
     background: url("/images/mapicon/boss.png") no-repeat center right !important;
 }
