Added a ViewCacheBuster which may or may not work. Clears all view caches upon request. WIP rating system. Added details for the DungeonRoute view page. Edited webpack.mix.js so that it doesn't copy files over in dev mode anymore, should upload to /public/ directly.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -47,6 +47,12 @@
     text-align: center;
 }
 
+.bootstrap-select .btn {
+    background-color: white;
+    border: 1px solid #ced4da;
+    color: #495057;
+}
+
 /** LEAFLET */
 #map {
     height: 940px;
@@ -167,4 +173,14 @@
 /** DATATABLES */
 #routes_table_filter {
     display: none;
+}
+
+/** MISC STYLES */
+.view_dungeonroute_details_row {
+    height: 40px;
+}
+
+#view_dungeonroute_group_setup {
+    display: flex;
+    align-items: center;
 }
