--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,3 +26,6 @@
 @import "~leaflet/dist/leaflet.css";
 @import "~leaflet-draw/dist/leaflet.draw.css";
 @import "~leaflet-contextmenu/dist/leaflet.contextmenu.css";
+
+// Bar rating
+@import "~jquery-bar-rating/dist/themes/bars-1to10.css";
