Added KillZone API Controllers, models, database tables, routes. Now just need to make the JS to couple enemies to killzones.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -169,6 +169,11 @@
     color: lightblue;
 }
 
+.marker_div_icon_killzone {
+    color: #d12600;
+    font-size: 30px;
+}
+
 .marker_div_icon_circle_border {
     border: 3px solid;
     border-radius: 15px;
