Fixed a few minor issues related to events. Added a few enemy_forces totals for some dungeons. Added a bar to show enemy forces in the route overview. Rewrote that part so I can add more UI elements much more easily.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -125,6 +125,14 @@
     margin-top: -20px !important;
 }
 
+#map_enemy_forces {
+    background-color: #fff;
+    border: 2px solid rgba(0,0,0,0.2);
+    background-clip: padding-box;
+    border-radius: 4px;
+    padding: 6px;
+}
+
 /** GENERAL ICONS */
 .username_menu {
     width: 105px;
