--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,9 +9,9 @@
 @import "~bootstrap-select/dist/css/bootstrap-select.min.css";
 
 // Bootstrap theme (bootstrap should be between these)
-// @import "~bootswatch/dist/superhero/_variables.scss";
+@import "~bootswatch/dist/superhero/variables";
 @import "~bootstrap/scss/bootstrap";
-// @import "~bootswatch/dist/superhero/_bootswatch.scss";
+@import "~bootswatch/dist/superhero/bootswatch";
 
 // Datatables
 @import "~datatables/media/css/jquery.dataTables.min.css";
