Added a flagged enemy state for when their NPC has no enemy_forces set. Makes it easy to spot where I need to look up footage of kills for numbers.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -111,6 +111,10 @@
     background: url("/images/mapicon/unset.png") no-repeat center !important;
 }
 
+.flagged_enemy_icon {
+    background: url("/images/mapicon/flagged.png") no-repeat center !important;
+}
+
 .door_icon {
     background: url("/images/mapicon/door.png") no-repeat center !important;
 }
