--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -171,6 +171,12 @@
     max-height: 24px;
 }
 
+.select_icon_test {
+    border-radius: 12px;
+    width: 24px;
+    max-height: 24px;
+}
+
 .display_icon {
     width: 32px;
     border-radius: 16px;
