--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -53,6 +53,12 @@
     color: #495057;
 }
 
+/* Override this so that long race names fit in their group selection boxes */
+.dropdown-item {
+    padding: 0.25em 1em;
+}
+
+/* Fix for selectpickers inside popups inside the map */
 #map .dropdown-menu {
     background-color: rgb(224, 224, 224);
 }
