Added ability to mark enemies with raid markers.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -144,6 +144,11 @@
     margin-top: -10px !important;
 }
 
+.killzone_enemy_icon_medium {
+    margin-left: -12px !important;
+    margin-top: -12px !important;
+}
+
 .killzone_enemy_icon_big {
     margin-left: -20px !important;
     margin-top: -20px !important;
