WIP reporting things such as routes, users, etc. Included FeatherLight to handle the lightbox.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -29,3 +29,6 @@
 
 // Bar rating
 @import "~jquery-bar-rating/dist/themes/bars-1to10.css";
+
+// Featherlight
+@import "~featherlight/src/featherlight.css";
