Some additions for supporting Patreon.

--- a/resources/assets/css/theme.css
+++ b/resources/assets/css/theme.css
@@ -22,3 +22,7 @@
 .featherlight .featherlight-content {
     background-color: #2B3E50;
 }
+
+.patreon-color {
+    background-color: rgb(250, 118, 100);
+}
