--- a/resources/assets/css/theme.css
+++ b/resources/assets/css/theme.css
@@ -26,3 +26,16 @@
 .patreon-color {
     background-color: rgb(250, 118, 100);
 }
+
+/* On home page */
+.probootstrap-showcase-nav ul li.active {
+    background-color: #8d9dad !important;
+}
+
+.probootstrap-showcase-nav ul li.active a {
+    color: rgb(235, 235, 235) !important;
+}
+
+.probootstrap-showcase-nav ul li > a {
+    color: #DF691A !important;
+}
