--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -32,3 +32,6 @@
 
 // Featherlight
 @import "~featherlight/src/featherlight.css";
+
+// Owl Carousel
+@import "~owl.carousel/dist/assets/owl.carousel.min.css";
