Home page is mostly done, just needs some images now! Reworked the footer so it doesn't look like garbage on mobile.

--- a/resources/assets/css/theme.css
+++ b/resources/assets/css/theme.css
@@ -39,3 +39,7 @@
 .probootstrap-showcase-nav ul li > a {
     color: #DF691A !important;
 }
+
+.service .icon i {
+    color: #DF691A !important;
+}
