--- a/resources/assets/css/home.css
+++ b/resources/assets/css/home.css
@@ -126,3 +126,99 @@
     line-height: 20px;
     margin-bottom: 0;
 }
+
+.probootstrap-gutter0 > div[class*='col-'] {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+@media screen and (max-width: 480px) {
+    .probootstrap-gutter0 > div[class*='col-'] {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
+
+.probootstrap-gutter40 > div[class*='col-'] {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+@media screen and (max-width: 480px) {
+    .probootstrap-gutter40 > div[class*='col-'] {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
+
+.probootstrap-gutter60 > div[class*='col-'] {
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+@media screen and (max-width: 480px) {
+    .probootstrap-gutter60 > div[class*='col-'] {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
+
+.service {
+    margin-bottom: 30px;
+    float: left;
+    width: 100%;
+}
+
+.service .icon {
+    display: block;
+    margin-bottom: 30px;
+}
+
+.service .icon i {
+    font-size: 60px;
+}
+
+.service h3 {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.service p {
+    font-size: 15px;
+}
+
+.service.left-icon {
+    margin-bottom: 20px !important;
+}
+
+.service.left-icon .icon, .service.left-icon .text {
+    display: table-cell;
+    vertical-align: top;
+}
+
+.service.left-icon .icon {
+    width: 80px;
+    position: relative;
+    top: 20px;
+}
+
+.service.left-icon .icon i {
+    font-size: 50px;
+}
+
+.service.left-icon .text {
+    display: table-cell;
+}
+
+.service.left-icon h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.service.left-icon p {
+    font-size: 14px;
+}
+
+.service.left-icon p:last-child {
+    margin-bottom: 0;
+}
