Finished the new home page, including some screenshots. Not 100% happy but passable for release! Added changelog page, added hidden mapping page for my own reference. Login/register modals now work.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -111,7 +111,7 @@
 }
 
 .flagged_enemy_icon {
-    background: url("/images/mapicon/flagged.png") no-repeat center !important;
+    background: url("/images/mapicon/neutral.png") no-repeat center !important;
 }
 
 .door_icon {
