--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -34,4 +34,7 @@
 @import "~featherlight/src/featherlight.css";
 
 // Owl Carousel
-@import "~owl.carousel/dist/assets/owl.carousel.min.css";
+// @import "~owl.carousel/dist/assets/owl.carousel.min.css";
+
+// Intro.js
+@import "~intro.js/minified/introjs.min.css";
