--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -250,3 +250,49 @@
     display: flex;
     align-items: center;
 }
+
+.affixes_overview_table td {
+    padding: 0;
+}
+
+.affixes_overview_table .affix_row {
+    padding: 5px;
+}
+
+.affixes_overview_table .last_column {
+    border-left: orange 3px solid;
+    border-right: orange 3px solid;
+    background-color: #ffa500bb;
+}
+
+.affixes_overview_table .last_column.first_row {
+    border-top: orange 3px solid;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.affixes_overview_table .last_column.last_row {
+    border-bottom: orange 3px solid;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.affixes_overview_table .current_week {
+    border-top: rgb(235, 235, 235) 3px solid;
+    border-bottom: rgb(235, 235, 235) 3px solid;
+    background-color: #2B3E50;
+}
+
+.affixes_overview_table .current_week.first_column {
+    border-left: rgb(235, 235, 235) 3px solid;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.affixes_overview_table .current_week.last_column {
+    border-right: rgb(235, 235, 235) 3px solid;
+    border-left: none; /* Disable overlapping borders when both rows overlap */
+    padding-left: 8px; /* Compensation for the missing border */
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
