Added virtual tour to the 'try it' route.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -241,6 +241,11 @@
     display: none;
 }
 
+/** INTRO.JS */
+.introjs-tooltip {
+    width: 400px !important;
+}
+
 /** MISC STYLES */
 .view_dungeonroute_details_row {
     height: 40px;
