Resetting your password now works. Sends an e-mail etc. Making an error while trying to register in the modal will redirect you to the /register page indicating what you did wrong. Fixed some more misc issues. More links to external sites now open in a new tab.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -47,6 +47,10 @@
     text-align: center;
 }
 
+.alert.alert-danger ul {
+    margin-bottom: 0;
+}
+
 /* Override this so that long race names fit in their group selection boxes */
 .dropdown-item {
     padding: 0.25em 0.9em;
