#26 Routes are now by default unpublished. Unpublished routes cannot be viewed by others, nor do they show up in the search. You have to publish your route in order to share it with others.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -251,8 +251,8 @@
 }
 
 /** MISC STYLES */
-#settings_wrapper.container {
-
+#map_route_unpublished_info {
+    margin-bottom: 0;
 }
 
 .view_dungeonroute_details_row {
