There's now validation on DungeonRoutes editing when sending it through the settings. You can now edit the route title through the edit page.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -245,6 +245,13 @@
     display: none;
 }
 
+#routes_table .limit_width {
+    max-width: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 /** INTRO.JS */
 .introjs-tooltip {
     width: 400px !important;
