--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,6 +26,7 @@
 // Owl Carousel
 // @import "~owl.carousel/dist/assets/owl.carousel.min.css";
 // Intro.js
+@import "~intro.js/minified/introjs.min.css";
 @import "~intro.js/themes/introjs-dark.css";
 // Password strength meter
 @import "~password-strength-meter/dist/password.min.css";
