--- a/resources/assets/css/raidmarkers.css
+++ b/resources/assets/css/raidmarkers.css
@@ -2,7 +2,20 @@
 
 .enemy_raid_marker_icon, .star_enemy_icon, .circle_enemy_icon, .diamond_enemy_icon, .triangle_enemy_icon,
 .moon_enemy_icon, .square_enemy_icon, .cross_enemy_icon, .skull_enemy_icon
-{ display: inline-block; background: url('/images/raidmarkers/raidmarkers.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; cursor: pointer; }
+{ display: inline-block; background: url('/images/raidmarkers/raidmarkers.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; cursor: pointer;}
+
+.enemy_raid_marker_icon {
+    margin: 2px;
+}
+
+/** To make it look proper we gotta increase the height, compensate for the border with margins (see above) */
+.enemy_raid_marker_icon.enemy_raid_marker_icon_selected {
+    margin: 0;
+    border: #DF691A solid 2px;
+    border-radius: 2px;
+    width: 36px;
+    height: 36px;
+}
 
 .enemy_raid_marker_icon_star { background-position: -0px -0px; width: 32px; height: 32px; }
 .enemy_raid_marker_icon_circle { background-position: -32px -0px; width: 32px; height: 32px; }
