#39 Added infested supported for modifiers with accompanying adjustments to the EnemyVisual system. Added a new 'infested voting' (name subject to change) layer which allows a user to vote all existing mobs for Infesting or not (not functional atm).
Use interface is almost done, perhaps some touch ups still, but other than that I can work on tying the front end and the back-end together. I'll still need a way to visualize how many votes are required for turning an enemy into an Infested enemy. And also work on the back end a bit so that Infested votes of a previous week are disregarded (not discarded yet!) AND need to add a Region toggle so that people in the EU will get served Infested enemies a day longer than their US counterparts.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -127,19 +127,19 @@
 .modifier_0 {
     top: -19px;
     left: -20px;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .modifier_1 {
     top: -22px;
     left: -3px;
-    background-color: green;
+    /* background-color: green; */
 }
 
 .modifier_2 {
     top: -19px;
     left: 14px;
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 .modifier_0_boss {
@@ -152,6 +152,26 @@
 
 .modifier_2_boss {
     left: 25px;
+}
+
+.modifier_infested_vote {
+    color: black;
+    background-color: #fffb;
+    border-radius: 20px;
+}
+
+.modifier_infested_enabled {
+    background-color: rgba(0, 255, 0, 0.5);
+    border-radius: 20px;
+}
+
+.modifier_infested_disabled {
+    background-color: rgba(255, 0, 0, 0.5);
+    border-radius: 20px;
+}
+
+.modifier_infested_vote:hover {
+    background-color: #ffa500bb;
 }
 
 .badge_enemy_forces {
